# oingo

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  todo.md
.devcontainer/: Dockerfile  devcontainer.json
apps/: CMakeLists.txt  ray_tracer.cpp
include/math/: constexpr.hpp  line.hpp
src/: CMakeLists.txt  common.hpp  config.cpp  config.hpp  config.hpp.in  film.cpp  film.hpp  logging.hpp  options.cpp  options.hpp  ppm.cpp  ppm.hpp
src/assimp/: CMakeLists.txt  scene.cpp  scene.hpp
src/cameras/: CMakeLists.txt  camera.hpp  digital.cpp  digital.hpp  film.cpp  film.hpp  pinhole.cpp  pinhole.hpp
src/config/: CMakeLists.txt  config.cpp  config.hpp
src/embree/: CMakeLists.txt  device.cpp  device.hpp  geometry.cpp  geometry.hpp  helper.cpp  helper.hpp  mesh.cpp  mesh.hpp  plane.cpp  plane.hpp  scene.cpp  scene.hpp
src/image/: CMakeLists.txt  exr.cpp  exr.hpp  rgb.cpp  rgb.hpp
src/images/: CMakeLists.txt  camera.hpp  exr.cpp  exr.hpp  film.cpp  film.hpp  pinhole.cpp  pinhole.hpp  rgb.cpp  rgb.hpp
src/integrators/: CMakeLists.txt  integrator.hpp  simple_sampler.cpp  simple_sampler.hpp  whitted.cpp  whitted.hpp
src/lights/: CMakeLists.txt  lights.hpp
src/logging/: CMakeLists.txt  console.hpp
src/materials/: CMakeLists.txt  material.hpp  test_materials.cpp  test_materials.hpp
src/math/: CMakeLists.txt  constexpr.hpp  floating_point.hpp  line.hpp  matrix.hpp  tensor.hpp  vector.hpp
src/objects/: CMakeLists.txt  material.hpp  object.hpp  sphere.cpp  sphere.hpp  surface.hpp
src/render/: CMakeLists.txt  ppm.hpp  renderer.hpp  sampler.hpp  simple_sampler.cpp  simple_sampler.hpp
src/scene/: CMakeLists.txt  lights.hpp  object.hpp  scene.hpp  test_scenes.cpp  test_scenes.hpp
src/shapes/: CMakeLists.txt  cylinder.cpp  cylinder.hpp  disk.cpp  disk.hpp  shape.hpp  sphere.cpp  sphere.hpp  tube.cpp  tube.hpp
src/specular/: CMakeLists.txt  colour.hpp  lights.hpp  material.hpp
src/tests/: CMakeLists.txt  test_scenes.cpp  test_scenes.hpp
src/utility/: CMakeLists.txt  timer.cpp  timer.hpp
src/utils/: CMakeLists.txt  depth_counter.cpp  depth_counter.hpp  eigen.cpp  eigen.hpp  logging.hpp  thread_pool.cpp  thread_pool.hpp
tests/: CMakeLists.txt  linear_algebra.cpp  test_scenes.cpp
