add_library(oingo-images STATIC pinhole.cpp film.cpp rgb.cpp exr.cpp)
target_include_directories(oingo-images PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/.. PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_features(oingo-images PUBLIC cxx_std_20)
find_package(Eigen3 3.3 REQUIRED)
target_link_libraries(oingo-images PUBLIC Eigen3::Eigen PRIVATE oingo-embree tinyexr)